replace map name

--- a/table/w3i.ini
+++ b/table/w3i.ini
@@ -2,8 +2,8 @@
 文件版本 = 25
 地图版本 = 4187
 编辑器版本 = 6052
-地图名称 = "我的英雄不可能那么萌"
-作者名字 = "魔霸工作室"
+地图名称 = "无尽求生"
+作者名字 = "可牧工作室"
 地图描述 = "这里并没有说明"
 推荐玩家 = "10人"
 
